Note on how to use